fixed pointing outlines. made it so it's layer is always behind field outlines and catalog markers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,7 +77,9 @@ will-change: unset;
     border-bottom: 3px solid #ffcdd2;
 }
 
-
+.leaflet-pointing-pane {
+    z-index: 300;
+}
 
 #download-mgr-iframe {
     border: none;
